- Checking with PHPStan and other static analyser.
- The schema generating feature works with activating the variable $activateGenerator in params.php.
- INTERMediator.prepareToScrollBack and scrollBack methods are for retrieving scroll position on backing from detail.
  samples/Sample_forDebugging/longlist.html is a sample of these methods.
- [INFO] In the Ver.9, the following change was made with compatibility. The setUpdatedRecord method doesn't call the
  setDataToUpdatedRecord anymore.
  - (Ver.9) The setUpdatedRecord method in database classes renamed to setDataToUpdatedRecord. For the compatibility,
    calling the setUpdateRecord method more than one parameter redirect to setDataToUpdatedRecord method.
    The setUpdatedRecord with one parameter works as the setter of updatedRecord property.
- [BUG FIX] The data-im="_@condition:..." way with numeric field and the "match" operator didn't expand the condition
  clause with '%term%' value. As far as PostgreSQL goes, the casting to text is automatically applied it.
- [BUG FIX] The INPUT[type=datetime-local] elements reported someone edit your modified data, but it was new record data
  after updateing is not adjusted to UTC correctly. Also INTERMediatorLib.dateTimeStringISO and some method returns
  browser local date and time.

Ver.11 (July 27, 2023)
- Generic exporting class prepared as DB\Export.php.
  See the Export button on the sample file /samples/Sample_pdf/list_detail_MySQL.html.
- SwiftMailer was removed, Symphony Mailer is introduced to send e-mail.
- The YAML based definition file can work as like PHP's one. The file name of yaml file can set as the same as page file.
  In the script tag to import the framework, the src attribute has to refer the index.php of the repository root.
- Page localizing is available. The $terms variable in params.php or terms key in the option area of a definition file,
  also using data-im-locale attribute for nodes on a page file.