@@ -18,6 +18,8 @@ Ver.12 (In Development)
 - The schema generating feature works with activating the variable $activateGenerator in params.php.
 - INTERMediator.prepareToScrollBack and scrollBack methods are for retrieving scroll position on backing from detail.
   samples/Sample_forDebugging/longlist.html is a sample of these methods.
+- On query condition, the value surrounded by @ is handled with the field name. For example, {field: "a", value: "b"}
+  generates the where clause `a` = "b", othewise {field: "a", value: "@b@"} generates `a` = `b`.
 - [INFO] In the Ver.9, the following change was made with compatibility. The setUpdatedRecord method doesn't call the
   setDataToUpdatedRecord anymore.
   - (Ver.9) The setUpdatedRecord method in database classes renamed to setDataToUpdatedRecord. For the compatibility,
